@@ -1,5 +1,6 @@
 package com.powsybl.dynawo.builders;
 
+import com.powsybl.commons.report.PowsyblCoreReportResourceBundle;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.commons.test.PowsyblTestReportResourceBundle;
 import com.powsybl.commons.test.TestUtil;
@@ -14,11 +15,13 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.IOException;
 import java.io.StringWriter;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class OutputVariablesBuilderTest {
 
@@ -40,7 +43,7 @@ class OutputVariablesBuilderTest {
                 .variable("generator_omegaPu")
                 .build();
         assertEquals(1, outputVariables.size());
-        OutputVariable variable = outputVariables.get(0);
+        OutputVariable variable = outputVariables.getFirst();
         assertEquals("BBM_GEN", variable.getModelId());
         assertEquals("generator_omegaPu", variable.getVariableName());
     }
@@ -52,7 +55,7 @@ class OutputVariablesBuilderTest {
                 .variables("generator_omegaPu", "generator_PGen")
                 .build();
         assertEquals(2, outputVariables.size());
-        OutputVariable variable = outputVariables.get(0);
+        OutputVariable variable = outputVariables.getFirst();
         assertEquals("NETWORK", variable.getModelId());
         assertEquals("GEN_generator_omegaPu", variable.getVariableName());
     }
@@ -63,6 +66,44 @@ class OutputVariablesBuilderTest {
         boolean hasInstance = !builderFunction.apply(reporter).build().isEmpty();
         assertEquals(isInstantiable, hasInstance);
         checkReportNode(report);
+    }
+
+    @Test
+    void testOutputVariablesNoContent() {
+        ReportNode reportNode = ReportNode.newRootReportNode()
+                .withResourceBundles(PowsyblCoreReportResourceBundle.BASE_NAME,
+                        PowsyblDynawoReportResourceBundle.BASE_NAME,
+                        PowsyblTestReportResourceBundle.TEST_BASE_NAME)
+                .withMessageTemplate("testOutputVariables")
+                .build();
+
+        List<OutputVariable> outputVariables = new DynawoOutputVariablesBuilder(reportNode)
+                .staticId("GEN")
+                .variables("", "")
+                .build();
+
+        assertTrue(outputVariables.isEmpty());
+        assertEquals(Collections.emptyList(), outputVariables);
+        assertTrue(reportNode.getChildren().stream().anyMatch(child -> "dynawo.dynasim.emptyList".equals(child.getMessageKey())));
+    }
+
+    @Test
+    void testEmptyListVariables() {
+        ReportNode reportNode = ReportNode.newRootReportNode()
+                .withResourceBundles(PowsyblCoreReportResourceBundle.BASE_NAME,
+                        PowsyblDynawoReportResourceBundle.BASE_NAME,
+                        PowsyblTestReportResourceBundle.TEST_BASE_NAME)
+                .withMessageTemplate("testOutputVariables")
+                .build();
+
+        List<OutputVariable> outputVariables = new DynawoOutputVariablesBuilder(reportNode)
+                .staticId("GEN")
+                .variables(Collections.emptyList())
+                .build();
+
+        assertTrue(outputVariables.isEmpty());
+        assertEquals(Collections.emptyList(), outputVariables);
+        assertTrue(reportNode.getChildren().stream().anyMatch(child -> "dynawo.dynasim.emptyList".equals(child.getMessageKey())));
     }
 
     private static Stream<Arguments> provideBuilderError() {
